--- a/gb/19/1/23/n10997305.md
+++ b/gb/19/1/23/n10997305.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/dmoadz208/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/dmoadz208/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/dmoadz208/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/dmoadz208/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/dmoadz208/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/dmoadz208/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/dmoadz208/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/tjvrql262/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/9.jpg" title="健康"><a href="https://www.youlucky.com"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/10.jpg" title="购物"></a><a href="https://donate.epochtimes.com/?utm_medium=epochtimes&utm_source=referral&utm_campaign=donate_button_djyarticleheader"><img src="https://raw.githubusercontent.com/tjvrql262/www/master/t/djy/12.jpg" title="捐款"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/tjvrql262/www/blob/master/README.md?zsrh#8">翻墙</a></p><p><a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5562.md#1">伪火</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/tjvrql262/ntdtv/blob/master/gb/prog1530_1.md#1">和平抗议</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/tjvrql262/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>官员不执行习指示 中共自曝官场弊病如晚清</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2015/01/1501152037292039-600x400.jpg" />
 <h6>中共十九届三中全会召开20个月后，才召开四中全会。这创了中共自1978年以来历届全会间隔时间最长纪录。（Feng Li/Getty Images）
 </h6>
 <hr>
-<p>【大纪元2019年01月24日讯】（大纪元记者文朴报导）中共政权即将步入70周年之际，<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%AE%98%E5%9C%BA.md">中共官场</a>的贪腐程度被指到了古今未有的程度。中纪委官媒也刊文将其与<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E6%99%9A%E6%B8%85.md">晚清</a>时的官场做比较，承认中共官场的弊病多，包括“<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E6%89%93%E5%A4%AA%E6%9E%81.md">打太极</a>”、有好处就上、有利益就占、有风险就逃等。</p>
-<p>中纪委官媒《中国纪检监察杂志》1月22日刊文，列举了<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%AE%98%E5%9C%BA.md">中共官场</a>的弊病，其中“<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E6%89%93%E5%A4%AA%E6%9E%81.md">打太极</a>”是中共官员从政的潜规则之一，哪怕民声鼎沸的问题，官员往往会用一句“这个问题很复杂”的话，推脱责任和敷衍问题；即使当局出台政策，也会被官员以“不完整”“不科学”“不实际”等各种理由不予理会。</p>
+<p>【大纪元2019年01月24日讯】（大纪元记者文朴报导）中共政权即将步入70周年之际，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%AE%98%E5%9C%BA.md#1">中共官场</a>的贪腐程度被指到了古今未有的程度。中纪委官媒也刊文将其与<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%99%9A%E6%B8%85.md#1">晚清</a>时的官场做比较，承认中共官场的弊病多，包括“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%89%93%E5%A4%AA%E6%9E%81.md#1">打太极</a>”、有好处就上、有利益就占、有风险就逃等。</p>
+<p>中纪委官媒《中国纪检监察杂志》1月22日刊文，列举了<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B8%AD%E5%85%B1%E5%AE%98%E5%9C%BA.md#1">中共官场</a>的弊病，其中“<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%89%93%E5%A4%AA%E6%9E%81.md#1">打太极</a>”是中共官员从政的潜规则之一，哪怕民声鼎沸的问题，官员往往会用一句“这个问题很复杂”的话，推脱责任和敷衍问题；即使当局出台政策，也会被官员以“不完整”“不科学”“不实际”等各种理由不予理会。</p>
 <p>在文章列举的弊病中，还有中共官员“有好处就上、有利益就占、有空子就钻、有风险就逃”等。</p>
-<p>文章专门提到偷奸耍滑、虚伪浮夸的“虚功之法”，以陕西秦岭违建别墅问题为例，称因陕西官场阳奉阴违，<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md">习近平</a>不得不作了六次批示。</p>
-<p>文章中将如今官场与<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E6%99%9A%E6%B8%85.md">晚清</a>官场相比。文章说，如在晚清咸丰帝时，曾国藩曾上书，痛陈官场积弊，“京官之办事通病有二，曰退缩，曰琐屑。外官之办事通病有二，曰敷衍，曰颟顸。”</p>
+<p>文章专门提到偷奸耍滑、虚伪浮夸的“虚功之法”，以陕西秦岭违建别墅问题为例，称因陕西官场阳奉阴违，<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>不得不作了六次批示。</p>
+<p>文章中将如今官场与<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%99%9A%E6%B8%85.md#1">晚清</a>官场相比。文章说，如在晚清咸丰帝时，曾国藩曾上书，痛陈官场积弊，“京官之办事通病有二，曰退缩，曰琐屑。外官之办事通病有二，曰敷衍，曰颟顸。”</p>
 <p>中共退役大校辛子陵曾评论，中共腐败远超清朝。他说：“像清朝都很腐败，也买官卖官，但是人家卖官，最大的也是卖到候补道台，地司局级。候补道台也就是给你发一身衣裳（官服），但没薪金。但大军区政委这是哪一级啊，在清朝这是总督啊！”</p>
 <h2><strong>中共官场腐败远超晚清</strong></h2>
-<p>其实，中共<a href="https://github.com/dmoadz208/djy/blob/master/gb/tag/%E6%94%BF%E4%BB%A4%E4%B8%8D%E5%87%BA%E4%B8%AD%E5%8D%97%E6%B5%B7.md">政令不出中南海</a>由来已久，而中共官场的贪腐程度则被指到了古今未有的程度。中共十八大以来，当局在“打虎”反腐运动中已公布拿下了267名省部级及军级官员，各级落马的官员更是数以千万计。</p>
+<p>其实，中共<ahref="https://github.com/tjvrql262/djy/blob/master/gb/tag/%E6%94%BF%E4%BB%A4%E4%B8%8D%E5%87%BA%E4%B8%AD%E5%8D%97%E6%B5%B7.md#1">政令不出中南海</a>由来已久，而中共官场的贪腐程度则被指到了古今未有的程度。中共十八大以来，当局在“打虎”反腐运动中已公布拿下了267名省部级及军级官员，各级落马的官员更是数以千万计。</p>
 <p>其中，中共副军级以上落马的官员有67人，包括两名前军委副主席郭伯雄、徐才厚，两名军委委员张阳、房峰辉，还有三名上将前空军政委田修思、武警部队前司令员王建平、中共国防大学前校长王喜斌等。</p>
 <p>政论作家、时事分析人士陈破空曾说，中共军队比世界上的任何军队都腐败，现在已经比清朝八旗子弟都腐败。他说，中共军队从当兵、提干、到转业、到边防军队走私军火、走私产品，还有守矿山、守金矿的，都是靠山吃山，靠水吃水，这种腐败完全说不完。</p>
 <p>中共少将、昆仑策研究院常务副院长昆仑岩曾在中共官媒上刊文说：“军队腐败处于一个危险的史无前例的水平。”</p>
@@ -23,42 +23,45 @@
 
 <hr>
 
-#### 本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://git.io/JesJV">翻墙软件</a>才能访问）
-> 原文：<a href="https://www.epochtimes.com/gb/19/1/23/n10997305.htm">官员不执行习指示 中共自曝官场弊病如晚清</a>
 
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>相关新闻：
-> <li><a href="https://www.epochtimes.com/gb/19/3/6/n11092642.htm">仅两成国际生考上大学 英语为主因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/2/27/n11077059.htm">非欧盟学生留学法国 本科和硕士注册费大涨</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/2/23/n11065493.htm">留美新生人数下滑 中国学生依然最多</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/1/28/n11007024.htm">留学生英语水平引忧 维州州长干预</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/1/16/n10979334.htm">为延长在澳逗留时间 近20万留学生转换签证</a></li>
-> <li><a href="https://www.epochtimes.com/gb/19/1/9/n10962420.htm">研究：6成留学生通过中介在加拿大上学</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/12/30/n10941031.htm">忧千人计划？麻省理工传拒收中国高中生</a></li>
-> <li><a href="https://www.epochtimes.com/gb/18/11/26/n10875639.htm">多伦多麦克肯立高中 - 通往主流社会精英之路</a></li>
-
-#### 下载<a href="https://git.io/JesJV">翻墙软件</a>浏览<a href="https://www.epochtimes.com">大纪元</a>热门新闻：
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869946.htm">大疫下解救有道 历史启示带您闯过武汉肺炎</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/14/n11869721.htm">【历史上的瘟疫】瘟疫中走向衰亡的古罗马帝国</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/11/n11860850.htm">《推背图》56象之卦预言武汉肺炎惊人巧合</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883542.htm">【热点互动】围绕零号病人 官方为何讳莫如深</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/5/n11846854.htm">【我来说西游】黑风山怪窃袈裟</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11886677.htm">【唐靖远快评】北京2月底须控制疫情的秘密</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/1/17/n11801312.htm">【更新】肺炎扩散30国和地区 武汉死亡率高</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879658.htm">【独家】外逃求生？武汉一天出走2.8万人</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883520.htm">断网前奏？中共工信部批准设立根服务器</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11882631.htm">传刘真装叶克膜抢救？ 经纪人：一起帮她集气</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878461.htm">台歌手大支写歌呛WHO 嘲讽中共数据造假</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883801.htm">古天乐全球搜130万口罩 四类人获优先赠予</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/18/n11878722.htm">钟楚红庆六十岁生日 无惧疫情照常聚餐</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879753.htm">日本动画预言香港反送中与武汉肺炎爆发？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/21/n11885487.htm">美国作家12年前“预言”武汉肺炎爆发</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/19/n11879107.htm">钻石公主号隔离仍爆高感染率 医师揭4大原因</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11883959.htm">刘真惊传叶克膜抢救 主动脉瓣狭窄有多危险？</a></li>
-> <li><a href="https://www.epochtimes.com/gb/20/2/20/n11881805.htm">搭飞机和计程车留意这些事 降传染风险</a></li>
+<strong>相关新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/19/1/23/n10995138.md#1">夏小强：习近平所提七大风险的真实状况</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/9/12/n10708825.md#1">中共民政部陷腐败窝案 福彩中心女高官落马</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/7/23/n10582900.md#1">疫苗领域腐败猖獗 中共国家药监局官员涉案</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/7/12/n10556977.md#1">中共大规模腐败 哈尔滨交通窝案251人被查</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/18/4/19/n10316712.md#1">官场大规模腐败 分析：中共体制出了问题</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/14/4/23/n4138514.md#1">甲午风云120周年  中共与晚清对阵</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/7/12/28/n1957064.md#1">辛声：从晚清“改革开放”的失败看中共灭亡的必然性</a></li>
 <hr>
 
-#### 手机上长按并复制下面二维码分享本文章：<br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/dmoadz208/djy/blob/master/gb/19/1/23/n10997305.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/dmoadz208/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/dmoadz208/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/dmoadz208/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/dmoadz208/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/dmoadz208/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+
+<strong>编辑推荐：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/4/n10360803.md#1" target="_blank">共产暴政录：统购统销洗劫中国农民</a></li><li><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/6/3/n11297122.md#1" target="_blank">外媒：中国陆军医院前实习生亲历活摘器官</a></li>
+<hr>
+
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936484.md#1">中共发言人赖美军带疫情到武汉 国际哗然</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11937929.md#1">陈时中：中共谈疫情没人信 WHO什么都不说</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936755.md#1">【最新疫情3.13】川普：我和习都知病毒来源</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936666.md#1">美国CDC承认了什么？中共再造假</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/2/18/n11877949.md#1">古今中外预言中的2020年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/5/n11918064.md#1">【文史】为一场地震 冥界筹备了50年</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/6/n11920009.md#1">皇上对蝗虫说了一句话 漫天蝗灾彻底消失</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11926997.md#1">中国等国为何疫情严重？犹太拉比：神在除恶</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934088.md#1">传钟南山被免职 专家组组长悄悄换人内幕</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936289.md#1">【新闻看点】发哨人引爆舆情 习访武汉 官宣破产</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936264.md#1">孝感高价菜引爆大规模抗议 市民怒喊“下课”</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938828.md#1">【新闻看点】甩锅美军 中共外交部演双簧？</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/9/n11927966.md#1">【罗厨寻味】腊味炒荷兰豆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/13/n11938032.md#1">父母染疫去世 武汉青山区爆孤儿隔离点</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11935159.md#1">世卫改武汉肺炎名称 黄秋生斥责获网友赞爆</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11934318.md#1">“女版黄安”刘乐妍返台住院用健保 网友炮轰</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933566.md#1">传中共广电局下限籍令 刘亦菲吴亦凡或受影响</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/12/n11936148.md#1">意大利为何疫情严重？意裔台湾男星析原因</a></li>
+<li><a href="https://github.com/qkhlv2383/djy/blob/master/gb/20/3/11/n11933325.md#1">吴亦凡从加国回中国复工 一抵达便被带走隔离</a></li>
+<hr>
+
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/tjvrql262/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/19/1/23/n10997305.htm">官员不执行习指示 中共自曝官场弊病如晚清</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/tjvrql262/djy/blob/master/gb/19/1/23/n10997305.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/tjvrql262/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/tjvrql262/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/tjvrql262/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
